--- a/HoYoLabGenshinBooter/app/src/main/AndroidManifest.xml
+++ b/HoYoLabGenshinBooter/app/src/main/AndroidManifest.xml
@@ -4,20 +4,17 @@
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HoYoLabGenshinBooter"
         tools:targetApi="31" >
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.HoYoLabGenshinBooter"
             android:noHistory="true" >
+            <!-- noHistory="true" : アプリ履歴に表示しない -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
